Fix GitHub Actions workflow: add explicit dependency path and install step

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -32,6 +32,11 @@ jobs:
         with:
           node-version: '18'
           cache: 'pnpm'
+          cache-dependency-path: 'transparent-camera-landing/pnpm-lock.yaml'
+
+      - name: Install dependencies
+        working-directory: transparent-camera-landing
+        run: pnpm install --frozen-lockfile
 
       - name: Build project
         working-directory: transparent-camera-landing
